fix "hiccups" the book would do when flipping to and from the covers

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -33,7 +33,7 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   flex-wrap: nowrap;
 }
 
@@ -57,7 +57,7 @@ body {
 
 .ribbons-container {
   height: 48rem;
-  flex-grow: 1;
+  width: 12rem;
   display: flex;
   flex-direction: column;
   align-items: start;
